# Kinematic-Arm-4-DOF

./: README.md
src/joystick/: CMakeLists.txt  package.xml
src/joystick/src/: controller_node.cpp
src/kinematic/: CMakeLists.txt  package.xml
src/kinematic/config/: controllers.yaml
src/kinematic/launch/: all.launch.py
src/kinematic/src/: kinematic.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py
src/robot_description/urdf/: arm.urdf  arm.urdf.xacro
